--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -12,7 +12,8 @@
 
 html {
   line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%;
+  width: 100%; /* 2 */
 }
 
 /* Sections
@@ -25,6 +26,7 @@ html {
 body {
   box-sizing: border-box;
   margin: 0;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'DM Sans', 'Droid Sans';
 }
