--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -30,7 +30,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'DM Sans', 'Droid Sans';
 }
-
+#__next {
+  position: relative;
+  top: 0;
+  left: 0;
+}
 /**
  * Render the `main` element consistently in IE.
  */
